--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist && npm run delete:dist",
+    "build:gh": "npm run delete:docs && npm run build:href && npm run copy:dist && npm run delete:dist",
     "build:href": "ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "delete:docs": "rd /s /q docs",
+    "delete:docs": "del docs",
     "copy:dist": "copyfiles dist/fastflow/* ./docs -f",
     "delete:dist": "rd /s /q dist "
   },
